removing md-sidenav

--- a/src/app/templates/tuning/main.html
+++ b/src/app/templates/tuning/main.html
@@ -1,64 +1,57 @@
 <div ng-controller="TuningController" layout="column" flex layout-fill ng-cloak>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="true" md-disable-backdrop>
-        <md-toolbar>
-            <h1 class="md-toolbar-tools">Server Options</h1>
-        </md-toolbar>
-        <md-content layout-padding="" flex>
-            <form name="projectForm">
-                <md-input-container style="width: 80%;">
-                    <label for="i_total_memory">Total Memory (GB)</label>
-                    <input required type="number" id="i_total_memory" ng-model="total_memory" min="1" max="3072" />
-                    <div ng-messages="projectForm.i_total_memory.$error">
-                        <div ng-message="required">This is required.</div>
-                    </div>
-                </md-input-container>
-                <md-input-container style="width: 80%;">
-                    <label>Application Profile:</label>
-                    <md-select ng-model="enviroment">
-                        <md-option ng-repeat="d in envFilters" value="{{ d.value }}">
-                            {{d.description}}
-                        </md-option>
-                    </md-select>
-                </md-input-container>
-                <md-input-container style="width: 80%;">
-                    <label for="i_max_connections">Max connections</label>
-                    <input required type="number" id="i_max_connections" ng-model="max_connections" min="1" max="99999" />
-                    <div ng-messages="projectForm.i_max_connections.$error">
-                        <div ng-message="required">This is required.</div>
-                    </div>
-                </md-input-container>
-                <md-input-container style="width: 80%;">
-                    <label>PostgreSQL version</label>
-                    <md-select ng-model="pg_version">
-                        <md-option ng-repeat="version in supported_versions" value="{{version}}">
-                            {{version}}
-                        </md-option>
-                    </md-select>
-                </md-input-container>
-                <md-button ng-click="make_url()" class="md-raised md-primary">
-                    RUN IT NOW!
-                </md-button>
-            </form>
-        </md-content>
-
-    </md-sidenav>
     <md-content>
 
         <md-card>
+
             <md-card-title>
                 <md-card-title-text>
                     <span class="md-headline">Summary</span>
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
-                <p>Sugested tuning for the parameters below:</p>
-                <ul>
-                    <li>{{total_memory}}GB of memory avaliable for the database;</li>
-                    <li>{{max_connections}} connections are spected;</li>
-                    <li>For {{enviroment}}-based application profile;</li>
-                    <li>Using PostgreSQL {{pg_version}} version.</li>
-                </ul>
+                <form name="projectForm">
+
+                    <div layout="row">
+                        <md-input-container flex="50">
+                            <label for="i_total_memory">Total Memory (GB)</label>
+                            <input required type="number" id="i_total_memory" ng-model="total_memory" min="1" max="3072" />
+                            <div ng-messages="projectForm.i_total_memory.$error">
+                                <div ng-message="required">This is required.</div>
+                            </div>
+                        </md-input-container>
+                        <md-input-container flex>
+                            <label for="i_max_connections">Max connections</label>
+                            <input required type="number" id="i_max_connections" ng-model="max_connections" min="1" max="99999" />
+                            <div ng-messages="projectForm.i_max_connections.$error">
+                                <div ng-message="required">This is required.</div>
+                            </div>
+                        </md-input-container>
+                    </div>
+                    <div layout="row">
+                        <md-input-container flex="66">
+                            <label>Application Profile:</label>
+                            <md-select ng-model="enviroment">
+                                <md-option ng-repeat="d in envFilters" value="{{ d.value }}">
+                                    {{d.description}}
+                                </md-option>
+                            </md-select>
+                        </md-input-container>
+                        <md-input-container flex>
+                            <label>PostgreSQL version</label>
+                            <md-select ng-model="pg_version">
+                                <md-option ng-repeat="version in supported_versions" value="{{version}}">
+                                    {{version}}
+                                </md-option>
+                            </md-select>
+                        </md-input-container>
+                    </div>
+                </form>
             </md-card-content>
+            <md-card-actions layout="row" layout-align="end center">
+                <md-button ng-click="make_url()" class="md-raised md-warn">
+                    RUN IT NOW!
+                </md-button>
+            </md-card-actions>
         </md-card>
         <tuning-grid></tuning-grid>
     </md-content>
