--- a/src/app/templates/tuning/toolbar.html
+++ b/src/app/templates/tuning/toolbar.html
@@ -1,7 +1,7 @@
 <md-toolbar ng-controller="TuningToolbarController" ng-show="show_toolbar">
     <div class="md-toolbar-tools md-toolbar-tools-bottom">
         <span flex></span>
-        <span layout="row" layout-sm="column">
+        <span layout="row">
             <md-button class="md-raised md-secudary" ng-click="showShareURL($event)" aria-label="Get the share URL">
             share!
             </md-button>
