--- a/src/app/templates/tuning/main.html
+++ b/src/app/templates/tuning/main.html
@@ -19,16 +19,18 @@
 							</md-select>
 						</md-input-container>
 						<md-input-container flex>
+							<label for="i_arch">Architecture</label>
+
+							<md-select ng-model="arch">
+								<md-option ng-repeat="d in archFilters" value="{{ d.value }}">
+									{{d.description}}
+								</md-option>
+							</md-select>
+						</md-input-container>
+						<md-input-container flex>
 							<label for="i_total_memory">Total Memory (GB)</label>
 							<input required type="number" id="i_total_memory" ng-model="total_memory" min="1" max="3072" />
 							<div ng-messages="projectForm.i_total_memory.$error">
-								<div ng-message="required">This is required.</div>
-							</div>
-						</md-input-container>
-						<md-input-container flex>
-							<label for="i_max_connections">Max connections</label>
-							<input required type="number" id="i_max_connections" ng-model="max_connections" min="1" max="99999" />
-							<div ng-messages="projectForm.i_max_connections.$error">
 								<div ng-message="required">This is required.</div>
 							</div>
 						</md-input-container>
@@ -41,6 +43,13 @@
 									{{d.description}}
 								</md-option>
 							</md-select>
+						</md-input-container>
+						<md-input-container flex>
+							<label for="i_max_connections">Max connections</label>
+							<input required type="number" id="i_max_connections" ng-model="max_connections" min="1" max="99999" />
+							<div ng-messages="projectForm.i_max_connections.$error">
+								<div ng-message="required">This is required.</div>
+							</div>
 						</md-input-container>
 						<md-input-container flex>
 							<label>PostgreSQL version</label>
